Functionality to join and leave groups have been added to the branch.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 ### MeteorJS ###
 # default meteor build and local packages
 .meteor/local
+StudyRingMeteor/npm-debug.log
 
 
 # meteor settings file
